Rename getTypeExpr to getType