@@ -81,7 +81,7 @@ public abstract class CovarianceChecker {
     if (expr instanceof PiExpression) {
       for (DependentLink link = ((PiExpression) expr).getParameters(); link.hasNext(); link = link.getNext()) {
         link = link.getNextTyped(null);
-        if (checkNonCovariant(link.getTypeExpr())) {
+        if (checkNonCovariant(link.getType())) {
           return true;
         }
       }
@@ -91,7 +91,7 @@ public abstract class CovarianceChecker {
     if (expr instanceof SigmaExpression) {
       for (DependentLink link = ((SigmaExpression) expr).getParameters(); link.hasNext(); link = link.getNext()) {
         link = link.getNextTyped(null);
-        if (check(link.getTypeExpr())) {
+        if (check(link.getType())) {
           return true;
         }
       }
@@ -147,7 +147,7 @@ public abstract class CovarianceChecker {
     }
 
     if (expr instanceof FunCallExpression funCall && funCall.getDefinition() == Prelude.ARRAY) {
-      return checkLevels(funCall.getLevels(), funCall) || check(funCall.getDefCallArguments().get(0));
+      return checkLevels(funCall.getLevels(), funCall) || check(funCall.getDefCallArguments().getFirst());
     }
 
     return checkOtherwise(expr);
