@@ -108,14 +108,14 @@ public class DataPolyTest extends TypeCheckingTestCase {
 
   @Test
   public void recursiveData() {
-    Constructor constructor = ((DataDefinition) typeCheckDef("\\data D | con D")).getConstructors().get(0);
-    assertEquals(Levels.EMPTY, ((DataCallExpression) constructor.getParameters().getTypeExpr()).getLevels());
+    Constructor constructor = ((DataDefinition) typeCheckDef("\\data D | con D")).getConstructors().getFirst();
+    assertEquals(Levels.EMPTY, ((DataCallExpression) constructor.getParameters().getType()).getLevels());
   }
 
   @Test
   public void recursiveData2() {
-    Constructor constructor = ((DataDefinition) typeCheckDef("\\data D (A : \\Type) | con (D A)")).getConstructors().get(0);
-    assertEquals(LevelPair.STD, ((DataCallExpression) constructor.getParameters().getTypeExpr()).getLevels());
+    Constructor constructor = ((DataDefinition) typeCheckDef("\\data D (A : \\Type) | con (D A)")).getConstructors().getFirst();
+    assertEquals(LevelPair.STD, ((DataCallExpression) constructor.getParameters().getType()).getLevels());
   }
 
   @Test
@@ -146,17 +146,19 @@ public class DataPolyTest extends TypeCheckingTestCase {
 
   @Test
   public void recursiveDataWithConstructor() {
-    typeCheckModule(
-      "\\data Data | cons \\Type \\Type\n" +
-      "\\record R (A : Data)\n" +
-      "\\data D | con1 (R (cons (\\Sigma) D)) | con2 (R (cons D (\\Sigma)))");
+    typeCheckModule("""
+      \\data Data | cons \\Type \\Type
+      \\record R (A : Data)
+      \\data D | con1 (R (cons (\\Sigma) D)) | con2 (R (cons D (\\Sigma)))
+      """);
   }
 
   @Test
   public void recursiveDataWithNew() {
-    typeCheckModule(
-      "\\record C (X Y : \\Type)\n" +
-      "\\record R (A : C)\n" +
-      "\\data D | con1 (R (\\new C (\\Sigma) D)) | con2 (R (\\new C D (\\Sigma)))");
+    typeCheckModule("""
+      \\record C (X Y : \\Type)
+      \\record R (A : C)
+      \\data D | con1 (R (\\new C (\\Sigma) D)) | con2 (R (\\new C D (\\Sigma)))
+      """);
   }
 }
